# monitor-agent

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  metrics.json  pyproject.toml  requirements-dev.txt  requirements.txt
monitor-agent/: main.py  settings.json  settings.py
monitor-agent/core/: command.py  metricFunctions.py  settings.py
monitor-agent/core/models/: metricModel.py
monitor_agent/: logger.py  main.py  metrics.json  settings.json  settings.py  settings_localhost.json
monitor_agent/api/: app.py
monitor_agent/api/endpoints/: __init__.py  commands.py  metrics.py  settings.py  thresholds.py
monitor_agent/api/schemas/: metrics.py
monitor_agent/core/: command.py  helper.py  metricFunctions.py  models.py
monitor_agent/core/models/: metricModel.py
monitor_agent/domain/entities/: disk_partition.py  network.py  process.py  user.py
monitor_agent/domain/services/: dynamic_metric.py  send_metrics.py  static_metric.py  status.py
monitor_agent/domain/services/os_functions/: boot_date.py  disk_info.py  logged_users.py  processes.py  uptime.py  utils.py
monitor_agent/domain/services/os_functions/network/: current_network_traffic.py  ip_address.py  total_network_traffic.py
monitor_agent/domain/services/periodic_tasks/: send_metrics.py
