[tool.poetry]
name = "monitor-agent"
version = "0.1.0"
description = "Monitor agent that sends and receives metrics and info from the REST API server."
authors = ["Pablo González Rubio <pjgr2000@gmail.com>"]
license = "GNU General Public License v3.0"
packages = [
    { include = "monitor-agent"},
    { include = "monitor-agent/**/*.py" },
]

[tool.poetry.scripts]
start = "monitor-agent.main:start"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
requests = "^2.27.1"
psutil = "^5.9.0"
fastapi = "^0.74.1"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
tox = "^3.24.5"
pre-commit-hooks = "^4.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
