[tool.poetry]
name = "monitor_agent"
version = "0.1.0"
description = "Monitor agent that sends and receives metrics and info from the REST API server."
authors = ["Pablo González Rubio <pjgr2000@gmail.com>"]
license = "GNU General Public License v3.0"
packages = [
    { include = "monitor_agent"},
    { include = "monitor_agent/**/*.py" },
]

[tool.poetry.scripts]
start = "monitor_agent.main:start"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
requests = "^2.27.1"
psutil = "^5.9.0"
fastapi = "^0.74.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.17.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
