[tool.poetry]
name = "monitor-agent"
version = "0.2.0"
description = "Agent executed on a host that retrieves metrics. Exposes an OAS3 API and is able to send the metrics remotely periodically."
authors = ["Pablo Jesús González Rubio <gonzrubio.pablo@gmail.com>"]
license = "MIT"
packages = [{ include = "monitor_agent" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
litestar = "^2.0.1"
psutil = "^5.9.5"
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
